# RagSystem

./: .gitignore  README.md  config.py  langgraph.json  main.py  pyproject.toml  server.py  test_multiturn_dialogue.py
config/: Config.py
docs/: architecture.md  difficult.md  problem.md  question.md
docs/chunk/: fit.md  realize.md
docs/eval/: rag-evaluation.md
docs/generate/: fit.md  realize.md  stream-abort.md
docs/memory_and_long_chat_and_compress/: compress_realize.md  fit.md  long_chat_realize.md
docs/multimodal_rag/: architecture.md
docs/retrieval/: fit.md
docs/upload_and_chunk/: architecture.md  realize.md
frontend/: README.md  index.html
frontend/css/: base.css  chat.css  components.css  knowledge.css  layout.css
frontend/js/: app.js  chat.js  knowledge.js
src/: graph.py  multi_step_graph.py
src/core/: exceptions.py  memory_manager.py  tools_pool.py
src/core/router/: query_router.py
src/core/shared/: adapter.py  fusion_retrieve.py  memory_manager.py  query_enhancer.py  task_analyzer.py  time_transforme.py
src/crawler/: Saver.py  spider_news.py
src/eval/: ragas_eval.py
src/monitoring/: logger.py
src/node/chunk/: chunk.py
src/node/expansion/: query_enhancer.py
src/observability/: langfuse_monitor.py  logger.py
src/services/: CrossEncoderRanker.py  GradeModel.py  cross_encoder_ranker.py  grade_model.py  relation_db.py  task_analyzer.py  time_transformer.py
tests/: eval_system.py  qa_pair.json  test_chunk.py  test_classification.py  test_graph.py  test_time_transforme.py
tests/eval/: dataset.ipynb  test_row_data.json
tests/test_data/: dataset.ipynb
utils/: ParallelChain.py  async_task.py  decortor.py  environ.py  file_tool.py  message_util.py  parse_tool.py
(+32 files in other folders)
