[project]
name = "hybridrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blockbuster>=1.5.26",
    "cloudpickle>=3.1.2",
    "jieba3k>=0.35.1",
    "jionlp>=1.5.27",
    "jsonpath-python>=1.1.4",
    "jsonschema-rs>=0.40.0",
    "langchain>=1.2.0",
    "langchain-community==1.0.0a1",
    "langchain-core>=0.3.0",
    "langchain-milvus>=0.3.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langfuse>=2.0.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "loguru>=0.7.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.3.5",
    "psutil>=7.1.3",
    "psycopg[binary,pool]>=3.2.0",
    "python-dateutil>=2.9.0",
    "pypdf>=5.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.2.0",
    "redis>=5.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
